--- a/styles/style.css
+++ b/styles/style.css
@@ -59,14 +59,14 @@ ol {
 .content__list {
   position: relative;
   max-height: 298px;
-  overflow: hidden scroll;
+  overflow: auto;
 }
 
 .content__details {
   display: grid;
   gap: 28px;
   max-width: 399px;
-  height: 534px;
+  min-height: 535px;
 }
 
 .result__video-container {
@@ -79,70 +79,106 @@ ol {
 .result__video {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__list-item:not(:last-child) {
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .content__video-card {
   display: flex;
   justify-content: flex-start;
-  align-self: center;
+  align-self: flex-start;
 }
 
 .content__video-card-thumbnail {
-  max-width: 194px;
-  min-height: 103px;
+  width: 194px;
+  height: 103px;
+  object-fit: contain;
+  object-position: center;
 }
 
 .content__video-card-description-container {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: inherit;
+  gap: 6px;
+  width: 200px;
+  overflow: hidden;
+  line-height: 100%;
 }
 
 .search-form__fieldset-title {
-  margin-bottom: 5px;
   font-weight: 400;
   font-size: 18px;
   line-height: normal;
 }
 
 .title {
-  font-family: Oswald;
+  font-family: "Oswald", Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 75px;
-  line-height: 94%;
+  line-height: 0.94;
   text-transform: uppercase;
 }
 
-.title .content__accent {
+.content__accent {
   color: #545050;
-  font-family: Oswald;
+  font-family: "Oswald", Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 75px;
-  line-height: 94%;
+  line-height: 0.94;
   text-transform: uppercase;
 }
 
 .content__card-link {
+  display: block;
   color: #fff;
   text-decoration: none;
 }
 
+.content__card-link:hover {
+  text-decoration: underline solid 1px;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  margin: 4px;
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
 .content__video-card-title {
-  font-family: Oswald;
+  padding-bottom: 5px;
+  overflow: hidden;
+  font-family: "Oswald", Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
+  text-overflow: ellipsis;
 }
 
-fieldset {
+.search-form__fieldset {
   border: none;
 }
 
 .search-form__label {
   display: flex;
+  align-items: center;
   gap: 5px;
   width: fit-content;
   cursor: pointer;
@@ -161,20 +197,22 @@ fieldset {
   cursor: pointer;
 }
 
-.search-form__label span:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration-line: underline;
 }
 
 .button {
+  height: 34px;
   border: 1px solid #fff;
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 18px;
   font-style: normal;
   line-height: normal;
   background: transparent;
   cursor: pointer;
+  appearance: none;
 }
 
 .button:hover {
@@ -185,22 +223,29 @@ fieldset {
   background-color: #545050;
 }
 
+.button:focus {
+  outline: none;
+}
+
 .button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 1px;
 }
 
+.more-button:focus-visible {
+  width: 375px;
+  margin: 2px;
+}
+
 .search-form__submit-button {
   width: 194px;
-  height: 34px;
 }
 
 .more-button {
-  width: 399px;
-  height: 34px;
+  width: 100%;
 }
 
-input[type="checkbox"]:checked + .search-form__pseudo-checkbox::before {
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
   content: "";
   display: block;
   width: 15px;
@@ -223,21 +268,28 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::before {
   border: none;
   border-block-start: 1px solid #fff;
   border-block-end: 1px solid #fff;
-  color: #fff;
+  outline: none;
+  color: rgba(255, 255, 255, 0.7);
   font-family: inherit;
   font-size: inherit;
   background-color: transparent;
+  cursor: pointer;
   min-inline-size: 225px;
   min-block-size: 27px;
   appearance: none;
 }
 
-.search-form__label {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  width: fit-content;
-  cursor: pointer;
+.search-form__textfield:hover {
+  cursor: text;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
 }
 
 .search-form__label:has(:focus-visible) {
@@ -245,7 +297,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::before {
   outline-offset: 2px;
 }
 
-.search-form__textfield {
+.search-form__label:focus {
   outline: none;
 }
 
